Refine hero copy for custom automation services

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             помилки в цінах і статусах та затримки в обробці замовлень. Ми налаштовуємо повну синхронізацію:
             товари, описи, фото, ціни та залишки оновлюються автоматично при кожній зміні у вашій системі.
             Додаємо і двосторонній обмін: нові замовлення з Shopify передаються в облік, а статуси повертаються
-            назад у магазин. Працюємо не лише з 1С, Торгсофт, BAS, ULTRA: підключаємо також будь-які сервіси
-            за вашим запитом, якщо вони допомагають автоматизувати й оптимізувати бізнес-процеси магазину Shopify.
+            назад у магазин. Працюємо не лише з готовими рішеннями, а й з кастомними сервісами під ваш запит,
+            якщо вони допомагають автоматизувати й оптимізувати бізнес-процеси магазину Shopify.
             Результат — актуальні дані, менше ручної роботи і швидше обслуговування клієнтів.
           </p>
 
