--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   <link rel="stylesheet" href="./styles.css" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11056829836"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-11056829836');
+  </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
