Minor copy tweak in integration note

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <p class="note">*Термін залежить від якості даних і кількості правил обміну.</p>
+          <p class="note">*Термін значною мірою залежить від якості даних і кількості правил обміну.</p>
         </div>
 
         <div class="hero__visual">
