Add SEO blog routes, templates, and first article

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
       <nav class="nav" id="menu">
         <a href="#services">Послуги</a>
+        <a href="/blog">Блог</a>
         <a href="#cases">Кейси</a>
         <a href="#process">Процес</a>
         <a href="#reviews">Відгуки</a>
@@ -661,6 +662,7 @@
 
         <div class="footer__links">
           <a href="#services">Послуги</a>
+          <a href="/blog">Блог</a>
           <a href="#faq">FAQ</a>
           <a href="#contact">Контакти</a>
         </div>
