Improve blog SEO, update layout, and switch app port to 8000

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <a class="btn" href="#contact">Запросити консультацію</a>
             <a class="btn btn--ghost" href="#blitz">Бліц-оцінка інтеграції</a>
           </div>
+          <p class="note"><a href="/blog">Читайте наш блог: практичні статті про товари, ціни, залишки та автоматизацію Shopify.</a></p>
 
           <div class="stats">
             <div class="stat">
